# PTXEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.sh  platformio.ini  uMath3D.code-workspace  uc3D.code-workspace
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml
.scripts/: BuildSharedReflectLib.py  CorrectPaths.py  GeneratePTXAll.py  GenerateuCore3DAll.py  HeaderCheck.py  HeaderCompile.sh  UpdatePTXRegistry.py
bindings/c_api/: README.md  reflect.h  reflect_capi.cpp
bindings/lua/: README.md  ptx_dev.lua  ptx_sugar.lua  test_reflection.lua
bindings/lua/src/: debug_list_rgbcolor_ctors.c  ptx_lua.c
bindings/python/: README.md
bindings/python/ptx/: __init__.py  reflection.py
engine/include/: README.md
engine/include/ptx/: ptxall.hpp
engine/include/ptx/debug/: debugdraw.hpp  profiler.hpp
engine/include/ptx/ecs/: component.hpp  entity.hpp  entitymanager.hpp  system.hpp
engine/include/ptx/project/: project.hpp
engine/include/ptx/registry/: reflect_helpers.hpp  reflect_make.hpp  registry.hpp
engine/include/ptx/resources/: resourcehandle.hpp  resourcemanager.hpp
engine/src/assets/font/: characters.cpp
engine/src/assets/image/: image.cpp  imagesequence.cpp
engine/src/assets/model/: indexgroup.cpp  statictrianglegroup.cpp  trianglegroup.cpp
engine/src/core/color/: gradientcolor.cpp  rgbcolor.cpp
engine/src/core/control/: bouncephysics.cpp  dampedspring.cpp  pid.cpp
engine/src/core/math/: axisangle.cpp  directionangle.cpp  eulerangles.cpp  eulerconstants.cpp  eulerorder.cpp  mathematics.cpp  quaternion.cpp  rotation.cpp  rotationmatrix.cpp  transform.cpp  vector2d.cpp  vector3d.cpp  yawpitchroll.cpp
engine/src/core/platform/: console.cpp  random.cpp  ustring.cpp
engine/src/core/signal/: fft.cpp  fftvoicedetection.cpp  functiongenerator.cpp
engine/src/core/time/: timestep.cpp  wait.cpp
engine/src/debug/: debugdraw.cpp  profiler.cpp
engine/src/ecs/: component.cpp  entitymanager.cpp
engine/src/project/: project.cpp
engine/src/resources/: resourcemanager.cpp
engine/src/systems/audio/: audioclip.cpp  audiomanager.cpp  audiosource.cpp
engine/src/systems/hardware/: controller.cpp  virtualcontroller.cpp
engine/src/systems/input/: gamepad.cpp  inputmanager.cpp  keyboard.cpp  mouse.cpp
engine/src/systems/particles/: particleemitter.cpp  particlesystem.cpp
engine/src/systems/physics/: boundarymotionsimulator.cpp  boxcollider.cpp  capsulecollider.cpp  collider.cpp  collisionmanager.cpp  physicssimulator.cpp  (+2 more)
include/um3d/control/: pid.hpp
include/um3d/helpers/: stringhelper.h  timehelper.hpp
include/um3d/math/: axisangle.hpp  directionangle.hpp  eulerangles.hpp  eulerconstants.hpp  eulerorder.hpp  mathematics.hpp  quaternion.hpp  rotationmatrix.hpp  transform.hpp  vector2d.hpp  vector3d.hpp  yawpitchroll.hpp
include/um3d/project/: project.cpp  project.hpp
include/um3d/scene/: mesh.hpp  scene.hpp
include/um3d/signal/: fft.hpp  functiongenerator.hpp
include/um3d/time/: timestep.hpp  wait.hpp
lib/ptx/: ptxall.hpp
lib/ptx/project/: project.cpp  project.hpp
lib/ptx/registry/: demangle.hpp  global_registry.hpp  reflect_helpers.hpp  reflect_macros.hpp  reflect_make.hpp  reflectable.hpp  registry.hpp
lib/ptx_c_api/: README.md  reflect_capi.cpp
lib/ptx_python/: README.md  reflection_demo.py
lib/ptx_python/ptx/: reflection.py
lib/uc3d/: ucore3dall.hpp
lib/uc3d/project/: project.cpp  project.hpp
scripts/: BuildSharedReflectLib.py  GeneratePTXAll.py  GenerateReflectionEntry.py  UpdatePTXRegistry.py  consoleoutput.py  generatetestskeletons.py  migrate_layout.py  requirements.txt
scripts/tests/: test_generateptxall.py  test_generatereflectionentry.py  test_generatetestskeletons.py  test_updateptxregistry.py
src/: allheaders.cpp  desktop_main.cpp  main.cpp  reflection_entry_gen.cpp  registry_test.cpp
src/assets/font/: characters.cpp
src/assets/image/: image.cpp  imagesequence.cpp
src/assets/mesh/: indexgroup.cpp
src/control/: pid.cpp
src/geometry/2d/: circle.cpp  ellipse.cpp  rectangle.cpp  shape.cpp  triangle.cpp
src/geometry/3d/: boundarycube.cpp  boundarysphere.cpp  cube.cpp  plane.cpp  sphere.cpp  triangle.cpp
src/geometry/spatial/: quadtree.cpp
src/math/: axisangle.cpp  directionangle.cpp  eulerangles.cpp  eulerconstants.cpp  eulerorder.cpp  mathematics.cpp  quaternion.cpp  rotation.cpp  rotationmatrix.cpp  transform.cpp  vector2d.cpp  vector3d.cpp  yawpitchroll.cpp
src/minimal_shm/: minimalshmproject.cpp  minimalshmproject.hpp  ws35pixels.hpp
src/physics/motion/: bouncephysics.cpp  dampedspring.cpp
src/physics/simulation/: boundarymotionsimulator.cpp  physicssimulator.cpp  vectorfield2d.cpp
src/render/core/: camerabase.cpp  cameralayout.cpp  cameramanager.cpp  pixel.cpp  rgbcolor.cpp
src/render/engine/: renderer.cpp
src/render/material/: imagematerial.cpp  imagesequencematerial.cpp  materialmask.cpp
src/render/raster/: rasterizer.cpp
src/render/ray/: raytracer.cpp
src/scene/: mesh.cpp  scene.cpp
src/scene/animation/: keyframe.cpp
src/scene/deform/: blendshape.cpp  meshalign.cpp  meshdeformer.cpp  trianglegroupdeformer.cpp
src/scene/lighting/: light.cpp
src/signal/: functiongenerator.cpp
src/signal/filter/: derivativefilter.cpp  fftfilter.cpp  quaternionkalmanfilter.cpp  rampfilter.cpp  vectorkalmanfilter.cpp  vectorrunningaveragefilter.cpp
src/signal/noise/: simplexnoise.cpp
src/time/: timestep.cpp  wait.cpp
test/: testmathematics.cpp  testmathematics.hpp  testquaternion.cpp  testquaternion.hpp  testrotation.hpp  testrotationmatrix.hpp  testvector2d.cpp  testvector2d.hpp  testvector3d.cpp  testvector3d.hpp
tests/: README.md
tests/engine/: test.cpp  testmathematics.hpp  testquaternion.cpp  testquaternion.hpp  testrotation.cpp  testrotation.hpp  testrotationmatrix.cpp  testrotationmatrix.hpp  testvector2d.cpp  testvector2d.hpp  testvector3d.cpp  testvector3d.hpp
tests/engine/utils/: testhelpers.hpp
todo/delete/: RainbowNoise2.h
todo/shader/: FlowNoise.h  RainbowNoise.h  RainbowSpiral.h  TVStatic.h
(+1012 files in other folders)
